<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <POU Name="InterfaceManualV1" Id="{69f8e896-e3c8-4e08-b157-7fa165a49498}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK InterfaceManualV1
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR

	comm AT%MB1024: commManual;
	
	monitorDevice : ICommon;
	controlDevice : ICommon;
	state : INT := 0;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//monitor
CASE TO_DWORD(comm.monitorType) OF
	eCategrories.SELECTION_AXIS:
		monitorDevice := gvl.axisControls[comm.monitorIndex];
	eCategrories.SELECTION_CYLINDER:
		monitorDevice := gvl.cylinderControls[comm.monitorIndex];
	eCategrories.SELECTION_UNIT:
		monitorDevice := gvl.stations[comm.monitorIndex]^;
END_CASE
comm.monitorBlock := monitorDevice.Monitor();
//control
CASE comm.commitSelection OF
	eCategrories.SELECTION_AXIS:
		controlDevice := gvl.axisControls[comm.monitorIndex];
	eCategrories.SELECTION_CYLINDER:
		controlDevice := gvl.cylinderControls[comm.monitorIndex];
	eCategrories.SELECTION_UNIT:
		controlDevice := gvl.stations[comm.monitorIndex]^;
	eCategrories.SELECTION_SIGNAL:
		
END_CASE
CASE state OF
	0:
		IF comm.wordIn.0 AND comm.wordIn.1 THEN
			//ENGAGED_HMI and RUN
			state := 1;
		END_IF
	1:
		CASE comm.commitMode OF
			//Manual execution
			eModes.MODE_EXE_AXIS,eModes.MODE_EXE_COMMAND_BLOCK,eModes.MODE_EXE_CYLINDER,eModes.MODE_EXE_UNIT:
				comm.wordOut.1 := controlDevice.Control(comm.commitBlock,TO_INT(comm.commitMode)); //return whether done
			eModes.MODE_UPLOAD_DATA_BLOCK:
				comm.commitBlock := controlDevice.ConfigureRead();
				comm.wordOut.1 := TRUE;
			eModes.MODE_DOWNLOAD_DATA_BLOCK:
				controlDevice.ConfigureWrite(comm.commitBlock);
				comm.wordOut.1 := TRUE;//done
		END_CASE
		
		IF comm.wordOut.1 OR NOT comm.wordIn.0 THEN
			//DONE or ENGAGED_HMI off
			state :=2;
		END_IF
	2:
		IF NOT comm.wordIn.1 THEN
			comm.wordOut.1 := FALSE;
			state := 0;
		END_IF
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="InterfaceManualV1">
      <LineId Id="112" Count="28" />
      <LineId Id="146" Count="0" />
      <LineId Id="141" Count="2" />
      <LineId Id="149" Count="0" />
      <LineId Id="162" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="150" Count="0" />
      <LineId Id="160" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="153" Count="2" />
      <LineId Id="157" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="151" Count="1" />
      <LineId Id="158" Count="0" />
      <LineId Id="166" Count="0" />
      <LineId Id="159" Count="0" />
      <LineId Id="63" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>